@@ -135,6 +135,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Support redirects in image namespace
 * (bug 10049) Prefix index search and namespaces in Special:Withoutinterwiki
 * (bug 12668) Support for custom iPhone bookmark icon via $wgAppleTouchIcon
+* Add option to include templates in Special:Export.
 
 
 === Bug fixes in 1.12 ===
